Fix height in abouts.html section, change align-items to flex-start, at a margin to the content and a max-height for img

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -306,7 +306,7 @@ footer {
     color: #3f4826;
 }
 
-/* About Us Section */
+/* abouts.html */
 
 #about-us-heading {
     margin-top: 30px;
@@ -316,25 +316,22 @@ footer {
 }
 
 #about-us {
-    height: 900px;
     width: 100%;
     background-color: #ffffff;
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
     align-content: center;
 }
 
-
 .about-us-content {
-    height: 600px;
     width: 25%;
+    margin: 50px auto;
 }
 
 .about-us-content img {
-    height: 300px;
+    max-height: 500px;
     width: 100%;
-    object-fit: contain;
     margin-bottom: 20px;
 }
 
@@ -343,6 +340,8 @@ footer {
     line-height: 25px;
     letter-spacing: 1px;
 }
+
+/*travel.html*/
 
 #travel-heading {
     text-align: center;
